--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamserve",
+  "name": "@jambooks/server",
   "version": "0.3.56",
   "description": "Jambooks server",
   "main": "index.js",
@@ -20,6 +20,7 @@
     "@aws-sdk/client-sqs": "^3.198.0",
     "@aws-sdk/credential-providers": "^3.170.0",
     "@aws-sdk/lib-storage": "^3.170.0",
+    "@jambooks/shared": "^1.0.4",
     "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -39,7 +40,6 @@
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
     "polotno-node": "^0.3.14",
-    "shared": "file:shared",
     "stripe": "^8.219.0",
     "twilio": "^3.57.0"
   },
