--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jambooks/server",
-  "version": "0.3.56",
+  "version": "0.3.57",
   "description": "Jambooks server",
   "main": "index.js",
   "author": "Fred Larsen <fredish@gmail.com>",
@@ -8,11 +8,12 @@
   "scripts": {
     "start": "NODE_PATH=. node server.js",
     "dev": "dotenvx run -- NODE_PATH=. CONF_ENV=dev NODE_ENV=production node --trace-warnings server.js",
-    "local": "NODE_PATH=. CONF_ENV=local NODE_ENV=development dotenvx run -- nodemon --watch . --watch '../shared' server.js",
+    "server-local": "NODE_PATH=. CONF_ENV=local NODE_ENV=development dotenvx run -- nodemon --watch . --watch '../shared' server.js",
     "proxy": "NODE_PATH=. DEV=true nodemon proxy.js",
     "build": "source $NVM_DIR/nvm.sh; nvm use stable; cd ..; vue-cli-service build",
     "zip-project": "rm -f /tmp/jam-web-* && zip -x 'node_modules/*' -x '.git/*' -x '.elasticbeanstalk/*' -x '.idea/*' -x 'shared/node_modules/*' -r /tmp/jam-web-$npm_package_version.zip .",
-    "deploy-dev": "npm run zip-project && eb-deploy -a web -e web-dev-new -z /tmp/jam-web-$npm_package_version.zip -l jam-web-$npm_package_version -b elasticbeanstalk-us-west-2-417582660030 --region us-west-2 --wait-until-deployed --use-existing-app-version --skip-cleanup",
+    "server-deploy-dev-old": "npm run zip-project && eb-deploy -a web -e web-dev-new -z /tmp/jam-web-$npm_package_version.zip -l jam-web-$npm_package_version -b elasticbeanstalk-us-west-2-417582660030 --region us-west-2 --wait-until-deployed --use-existing-app-version --skip-cleanup",
+    "server-deploy-dev": "npm run zip-project && eb-deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -20,7 +21,7 @@
     "@aws-sdk/client-sqs": "^3.198.0",
     "@aws-sdk/credential-providers": "^3.170.0",
     "@aws-sdk/lib-storage": "^3.170.0",
-    "@jambooks/shared": "^1.0.4",
+    "@jambooks/shared": "^1.0.7",
     "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
