--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jambooks/server",
-  "version": "0.3.58",
+  "version": "0.3.59",
   "description": "Jambooks server",
   "main": "index.js",
   "author": "Fred Larsen <fredish@gmail.com>",
@@ -11,9 +11,9 @@
     "server-local": "NODE_PATH=. CONF_ENV=local NODE_ENV=development dotenvx run -- nodemon --watch . --watch '../shared' server.js",
     "proxy": "NODE_PATH=. DEV=true nodemon proxy.js",
     "build": "source $NVM_DIR/nvm.sh; nvm use stable; cd ..; vue-cli-service build",
-    "zip-project": "rm -f /tmp/jam-web-* && zip -x 'node_modules/*' -x '.git/*' -x '.elasticbeanstalk/*' -x '.idea/*' -x 'shared/node_modules/*' -r /tmp/jam-web-$npm_package_version.zip .",
+    "zip-project": "rm -f /tmp/jam-web-* && zip -x 'node_modules/*' -x '.git/*' -x '.elasticbeanstalk/*' -x '.idea/*' -x 'shared/node_modules/*' -r /tmp/jam-web-current.zip .",
     "server-deploy-dev-old": "npm run zip-project && eb-deploy -a web -e web-dev-new -z /tmp/jam-web-$npm_package_version.zip -l jam-web-$npm_package_version -b elasticbeanstalk-us-west-2-417582660030 --region us-west-2 --wait-until-deployed --use-existing-app-version --skip-cleanup",
-    "server-deploy-dev": "eb deploy -v --label jam-web-$npm_package_version --staged",
+    "server-deploy-dev": "eb deploy --label jam-web-$npm_package_version --staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -41,11 +41,11 @@
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
     "stripe": "^8.219.0",
-    "twilio": "^3.57.0"
+    "twilio": "^3.57.0",
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
-    "nodemon": "^3.1.9",
-    "sharp": "^0.31.0"
+    "nodemon": "^3.1.9"
   }
 }
