--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # .env.example
-# Alexanders
+# Alexanders (not needed in dev)
 JAM_ALEXANDERS_API_KEY="your-alexanders-api-key"
 
-# API
+# API (used from queue repo)
 JAM_API_TOKEN="your-api-token"
 
 # AWS
 JAM_AWS_ACCESS_KEY="your-aws-access-key"
 JAM_AWS_ACCESS_SECRET="your-aws-access-secret"
 
-# Browserless
+# Browserless (not needed)
 JAM_BROWSERLESS_KEY="your-browserless-key"
 
 # Express
@@ -18,11 +18,11 @@ JAM_EXPRESS_SESSION_REDIS_URL="your-express-session-url"
 # Mongodb
 JAM_MONGODB_URL="your-mongodb-url"
 
-# Queue
+# Queue (used by queue repo for bullmq)
 JAM_QUEUE_REDIS_HOST="your-queue-redis-host"
 JAM_QUEUE_REDIS_PORT="your-queue-redis-port"
 
-#Sendgrid
+#Sendgrid (sending emails)
 JAM_SENDGRID_APIKEY="your-send-grid-api-key"
 
 #Stripe
@@ -35,18 +35,7 @@ JAM_TWILIO_SERVICESID="your-twilio-serviceid"
 JAM_TWILIO_SID="your-twilio-sid"
 JAM_TWILIO_TOKEN="your-twilio-token"
 
-
 # AWS Configuration
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your-access-key-id
 AWS_SECRET_ACCESS_KEY=your-secret-access-key
-
-
-# Stripe
-STRIPE_KEY=your-stripe-key
-STRIPE_SECRET=your-stripe-secret
-
-# MongoDB
-MONGODB_URL=your-mongo-url
-
-
