--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
+    "sharp": "^0.31.0",
     "stripe": "^8.219.0",
-    "twilio": "^3.57.0",
-    "sharp": "^0.31.0"
+    "twilio": "^3.57.0"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.39.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.1.9"
   }
